push up route to serve files from data dir
